Added Java parameters to soatest.bat soatestcli execution that keeps failing in Jenkins.